force-app/main/default/objects/Opportunity_Plan__c/Opportunity_Plan__c.object-meta.xml
<CustomObject>
    <description>Used to allow Sales users to make a strategic plan to close a particular opportunity.  Linked to Opportunities, Account Plans, and Competitor objects.</description>
    <label>Plan To Win (Opportunity Plan)</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{00000}</displayFormat>
        <label>Plan to Win Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan To Win (Opportunity Plans)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>