force-app/main/default/objects/Opportunity_Plan__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <formula>Opportunity__r.Account_Plan__r.Name</formula>
    <label>Account Plan</label>
    <type>Text</type>
</CustomField>