force-app/main/default/objects/Opportunity_Plan__c/fields/Brief_Account_History__c.field-meta.xml
<CustomField>
    <fullName>Brief_Account_History__c</fullName>
    <label>Brief Account History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>