force-app/main/default/objects/Opportunity_Plan__c/fields/Buying_Role__c.field-meta.xml
<CustomField>
    <fullName>Buying_Role__c</fullName>
    <inlineHelpText>Users make judgments about the impact the solution will have on their job performance because they use or supervise use of the solution. Evaluates assess the suitability of the solution to solve for the business challenges.</inlineHelpText>
    <label>Buying Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>