force-app/main/default/objects/Opportunity_Plan__c/fields/CBN_Impacts_Cost_of_No_Decision__c.field-meta.xml
<CustomField>
    <fullName>CBN_Impacts_Cost_of_No_Decision__c</fullName>
    <inlineHelpText>Summarize the Impact/cost of no decision for CBNs. IS the cost of the issue larger than the cost of solution? How important is the impact to the customer? What is the cost of maintaining status quo?</inlineHelpText>
    <label>CBN Impacts/Cost of No Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>