force-app/main/default/objects/Opportunity_Plan__c/fields/Commercial_Overview__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Overview__c</fullName>
    <label>Commercial Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>