force-app/main/default/objects/Opportunity_Plan__c/fields/Competitive_Landscape__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Landscape__c</fullName>
    <label>Competitive Landscape</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>