force-app/main/default/objects/Opportunity_Plan__c/fields/Competitive_Situation__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Situation__c</fullName>
    <inlineHelpText>What are the Customer&apos;s other options? How are we different from them in resolving their internal challenges?</inlineHelpText>
    <label>Competitive Situation (Competitors,IRM)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>