force-app/main/default/objects/Opportunity_Plan__c/fields/Critical_Business_Needs_CBN__c.field-meta.xml
<CustomField>
    <fullName>Critical_Business_Needs_CBN__c</fullName>
    <inlineHelpText>List the critical business needs along with the evidence/impact, and the business limitations for each one.</inlineHelpText>
    <label>Critical Business Needs (CBN)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>