force-app/main/default/objects/Opportunity_Plan__c/fields/Current_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Current_Next_Steps__c</fullName>
    <formula>Opportunity__r.NextStep</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Next Steps</label>
    <type>Text</type>
</CustomField>