force-app/main/default/objects/Opportunity_Plan__c/fields/Customer_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Narrative__c</fullName>
    <label>Analysis of the Relationship History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>