force-app/main/default/objects/Opportunity_Plan__c/fields/Customer_s_Business_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Business_Objectives__c</fullName>
    <label>Customer’s Business Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>