force-app/main/default/objects/Opportunity_Plan__c/fields/Customer_s_Internal_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Internal_Challenges__c</fullName>
    <label>Customer&apos;s Internal Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>