force-app/main/default/objects/Opportunity_Plan__c/fields/Customer_walk_away_Point__c.field-meta.xml
<CustomField>
    <fullName>Customer_walk_away_Point__c</fullName>
    <label>Customer walk away point?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>