force-app/main/default/objects/Opportunity_Plan__c/fields/Decision_Grid__c.field-meta.xml
<CustomField>
    <fullName>Decision_Grid__c</fullName>
    <inlineHelpText>What are decision &amp; steps your customer needs to take? Include the stakeholders, their vital crieria/beliefs, &amp; the timeline.</inlineHelpText>
    <label>Decision Grid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>