force-app/main/default/objects/Opportunity_Plan__c/fields/Estimated_Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Budget__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>