force-app/main/default/objects/Opportunity_Plan__c/fields/Estimated_start_of_billing__c.field-meta.xml
<CustomField>
    <fullName>Estimated_start_of_billing__c</fullName>
    <formula>Opportunity__r.IM_Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated start of billing</label>
    <type>Date</type>
</CustomField>