force-app/main/default/objects/Opportunity_Plan__c/fields/Expected_Customer_Outcome_s_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Expected_Customer_Outcome_s_Metrics__c</fullName>
    <inlineHelpText>How will we co-create value together with the Customer to help them meet and exceed their business objectives?
How will they quantify this? e.g. decrease cost, mitigate risk, improve revenue, improve outcomes.</inlineHelpText>
    <label>Expected Customer Outcome(s) Metrics</label>
    <length>100</length>
    <type>Text</type>
</CustomField>