force-app/main/default/objects/Opportunity_Plan__c/fields/External_Pressures_Impacting_Customer__c.field-meta.xml
<CustomField>
    <fullName>External_Pressures_Impacting_Customer__c</fullName>
    <inlineHelpText>What are the external pressures and drivers that are impacting the Customer’s business? e.g. M&amp;A, COVID-19, industry shift towards environmental impact.</inlineHelpText>
    <label>External Pressures Impacting Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>