force-app/main/default/objects/Opportunity_Plan__c/fields/Give_Gets_Strategy_Attached__c.field-meta.xml
<CustomField>
    <fullName>Give_Gets_Strategy_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Give Gets Strategy Attached</label>
    <type>Checkbox</type>
</CustomField>