force-app/main/default/objects/Opportunity_Plan__c/fields/Global_Industries_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Global_Industries_Opportunity__c</fullName>
    <formula>Opportunity__r.Account.Global_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Industries Opportunity?</label>
    <type>Checkbox</type>
</CustomField>