force-app/main/default/objects/Opportunity_Plan__c/fields/How_does_this_align_to_the_Acct_Strategy__c.field-meta.xml
<CustomField>
    <fullName>How_does_this_align_to_the_Acct_Strategy__c</fullName>
    <label>How does this align to the Acct Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>