force-app/main/default/objects/Opportunity_Plan__c/fields/Internal_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Internal_Challenges__c</fullName>
    <inlineHelpText>What obstacles is the customer facing that may stop them from meeting their business objectives? How are they quantifying this identified pain? e.g. not enough staff or internal expertise, wasted revenue or employee productivity.</inlineHelpText>
    <label>Internal Challenges</label>
    <length>100</length>
    <type>Text</type>
</CustomField>