force-app/main/default/objects/Opportunity_Plan__c/fields/Iron_Mountain_s_Solution_s__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mountain_s_Solution_s__c</fullName>
    <label>Iron Mountain&apos;s Solution(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>