force-app/main/default/objects/Opportunity_Plan__c/fields/Iron_Mountain_s_Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mountain_s_Unique_Value__c</fullName>
    <label>Iron Mountain&apos;s Unique Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>