force-app/main/default/objects/Opportunity_Plan__c/fields/Key_Customer_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_Stakeholders__c</fullName>
    <inlineHelpText>Who is the Economic Buyer (decision maker)? Who is your champion (influencing the economic buyer)?</inlineHelpText>
    <label>Key Customer Stakeholders-Economic Buyer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>