force-app/main/default/objects/Opportunity_Plan__c/fields/Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Update Date</label>
    <type>Date</type>
</CustomField>