force-app/main/default/objects/Opportunity_Plan__c/fields/Market_Sector_Industry__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector_Industry__c</fullName>
    <formula>Text(Opportunity__r.Account.IM_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sector / Industry</label>
    <type>Text</type>
</CustomField>