force-app/main/default/objects/Opportunity_Plan__c/fields/Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score__c</fullName>
    <formula>Opportunity__r.Opportunity_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>