force-app/main/default/objects/Opportunity_Plan__c/fields/Past_Proven_Value_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Past_Proven_Value_Strategy__c</fullName>
    <inlineHelpText>When have we helped address comparable internal challenge within their organization or with other customers (if no examples apply)? i.e. leverage a reference, case study, use case.</inlineHelpText>
    <label>Past Proven Value Strategy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>