force-app/main/default/objects/Opportunity_Plan__c/fields/Possible_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Possible_Next_Steps__c</fullName>
    <inlineHelpText>Brainstorm and capture ideas and thoughts on possible next steps here.</inlineHelpText>
    <label>Possible Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>