force-app/main/default/objects/Opportunity_Plan__c/fields/Primary_LOB__c.field-meta.xml
<CustomField>
    <fullName>Primary_LOB__c</fullName>
    <formula>Text(Opportunity__r.Primary_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary LOB</label>
    <type>Text</type>
</CustomField>