force-app/main/default/objects/Opportunity_Plan__c/fields/Probability_of_winning__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_winning__c</fullName>
    <formula>Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability of winning (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>