force-app/main/default/objects/Opportunity_Plan__c/fields/Professional_Services_Lead__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Lead__c</fullName>
    <formula>Opportunity__r.Professional_Services_Lead__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Professional_Services_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Professional Services Lead</label>
    <type>Text</type>
</CustomField>