force-app/main/default/objects/Opportunity_Plan__c/fields/Project_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Project_Contract_Term__c</fullName>
    <formula>Opportunity__r.Contract_Term_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project/Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>