force-app/main/default/objects/Opportunity_Plan__c/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <formula>Text(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Stage</label>
    <type>Text</type>
</CustomField>