force-app/main/default/objects/Opportunity_Plan__c/fields/Solution_Sales_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Solution_Sales_Specialist__c</fullName>
    <formula>Opportunity__r.Solution_Development_Rep__r.FirstName +&apos; &apos;+ Opportunity__r.Solution_Development_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Sales Specialist</label>
    <type>Text</type>
</CustomField>