force-app/main/default/objects/Opportunity_Plan__c/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <formula>Opportunity__r.Application_Specialist__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Application_Specialist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solutions Architect</label>
    <type>Text</type>
</CustomField>