force-app/main/default/objects/Opportunity_Plan__c/fields/Support_of_Solution__c.field-meta.xml
<CustomField>
    <fullName>Support_of_Solution__c</fullName>
    <inlineHelpText>Champions believe that your success is critical to their company or to them personally. A mentor will help you win. Neutral shows no preference. Non-supporter believes you shouldn’t win.</inlineHelpText>
    <label>Support of Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>