force-app/main/default/objects/Opportunity_Plan__c/fields/Type_of_Deal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Deal__c</fullName>
    <formula>Text(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Deal</label>
    <type>Text</type>
</CustomField>