force-app/main/default/objects/Opportunity_Plan__c/fields/Unaddressed_Yellow_Lights_Unknown_Info__c.field-meta.xml
<CustomField>
    <fullName>Unaddressed_Yellow_Lights_Unknown_Info__c</fullName>
    <inlineHelpText>What are your concerns you have yet to address? Where do you feel uncomfortable? In the spirit of &quot;No Guessing,&quot; what do you feel you need to ask of or address with the customer?</inlineHelpText>
    <label>Unaddressed Yellow Lights/Unknown Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>