force-app/main/default/objects/Opportunity_Plan__c/fields/Unique_Business_Value_Point_of_View__c.field-meta.xml
<CustomField>
    <fullName>Unique_Business_Value_Point_of_View__c</fullName>
    <inlineHelpText>This is the tangible or intangible value you provide the customer. It must be defined in the customer&apos;s terms and differentiate your solution from the competition. This may also be your unique perspective on how they should see their issue.</inlineHelpText>
    <label>Unique Business Value / Point of View</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>