force-app/main/default/objects/Opportunity_Plan__c/fields/What_are_our_weaknesses__c.field-meta.xml
<CustomField>
    <fullName>What_are_our_weaknesses__c</fullName>
    <inlineHelpText>As it relates to winning this Opportunity.</inlineHelpText>
    <label>What are our weaknesses?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>