force-app/main/default/objects/Opportunity_Plan__c/fields/What_are_the_value_drivers__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_value_drivers__c</fullName>
    <inlineHelpText>From the customer&apos;s viewpoint.</inlineHelpText>
    <label>What are the value drivers?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>