force-app/main/default/objects/Opportunity_Plan__c/fields/What_is_our_competitive_strategy__c.field-meta.xml
<CustomField>
    <fullName>What_is_our_competitive_strategy__c</fullName>
    <inlineHelpText>Direct: it&apos;s our sweet spot, reposition: challenge status quo, /flank, fragmented.</inlineHelpText>
    <label>What is our competitive strategy?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>