force-app/main/default/objects/Opportunity_Plan__c/fields/What_is_our_customers_starting_point__c.field-meta.xml
<CustomField>
    <fullName>What_is_our_customers_starting_point__c</fullName>
    <label>What is our customers starting point?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>