force-app/main/default/objects/Opportunity_Plan__c/fields/What_is_our_solution_strategy__c.field-meta.xml
<CustomField>
    <fullName>What_is_our_solution_strategy__c</fullName>
    <inlineHelpText>What is our approach to solving their needs? How do we address their issues while taking into consideration the competition and their strengths and vulnerabilities?</inlineHelpText>
    <label>What is our solution strategy?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>