force-app/main/default/objects/Opportunity_Plan__c/fields/Which_Opportunities_impact_the_renewal__c.field-meta.xml
<CustomField>
    <fullName>Which_Opportunities_impact_the_renewal__c</fullName>
    <label>Which Opportunities impact the renewal?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>