force-app/main/default/objects/Opportunity_Plan__c/fields/Why_is_this_worth_winning__c.field-meta.xml
<CustomField>
    <fullName>Why_is_this_worth_winning__c</fullName>
    <label>Why is this worth winning?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>