force-app/main/default/objects/Opportunity_Plan__c/recordTypes/Old_Plan_to_Win.recordType-meta.xml
<RecordType>
    <fullName>Old_Plan_to_Win</fullName>
    <active>true</active>
    <description>Existing Plan to Win Records</description>
    <label>Old Plan to Win</label>
</RecordType>