force-app/main/default/objects/Opportunity_Plan__c/recordTypes/Plan_to_Win.recordType-meta.xml
<RecordType>
    <fullName>Plan_to_Win</fullName>
    <active>true</active>
    <description>New Plan to Win Record</description>
    <label>Plan to Win</label>
</RecordType>